k8s-manifests/03-advanced-delivery/frontend/frontend-deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-frontend
  namespace: demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-frontend

  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
      - name: web
        image: image-registry.openshift-image-registry.svc:5000/demo/mi-web:latest
        ports:
        - containerPort: 8080

  strategy:
    canary:
      stableService: demo-frontend
      canaryService: demo-frontend-canary

      steps:
      - setWeight: 25
      - pause: {}

      - setWeight: 50
      - pause:
          duration: 1m

      - setWeight: 100
---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: demo
spec:
  selector:
    app: demo-frontend
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend-canary
  namespace: demo
spec:
  selector:
    app: demo-frontend
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-frontend-route
  namespace: demo
spec:
  to:
    kind: Service
    name: demo-frontend
  port:
    targetPort: 80
