k8s-manifests/03-advanced-delivery/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-frontend-route
  namespace: demo
spec:
  host: demo-frontend-route-demo.apps.ocp.sbox.anubix.tech
  to:
    kind: Service
    name: demo-frontend
  alternateBackends:
  - kind: Service
    name: demo-frontend-canary
  port:
    targetPort: http-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
